[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsa-utils"
version = "0.1.0"
description = "Quick utils for representational similarity analysis (RSA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rsa_utils*"]
